# lingobar

./: .gitignore  README.md  about.html  chrome.html  history.html  logview.html  package-lock.json  package.json  prefs.html  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: release.yml
scripts/: release.sh
src/: about.ts  chrome.ts  history.ts  logview.ts  prefs.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json  local.json
src-tauri/src/: config.rs  history.rs  injection.rs  lib.rs  log.rs  main.rs  session.rs  shortcuts.rs  tabs.rs
src-tauri/src/platform/: fallback.rs  macos.rs  mod.rs
